n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n

  template:
    metadata:
      labels:
        app: n8n
        name: n8n
    spec:
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:1.89.2
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: n8n-data
              mountPath: "/home/node/.n8n"
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data

---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - port: 80
      targetPort: 5678
      name: n8n-ui
      protocol: TCP
  #   - 192.168.1.14
